footer html tilføjet

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=style.css.map */
+/* Variabler*/
+/*Mixins*/
+/*Mobil*/
+/*Generel styling*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}/*# sourceMappingURL=style.css.map */
