--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,21 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+/*Branding proces*/
+a {
+  background-color: #d47b28;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  text-decoration: none;
+  text-align: center;
+  width: 365px;
+  height: 50px;
+  color: black;
+  font-family: "roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }/*# sourceMappingURL=style.css.map */
