Styling af toppen af Branding proces

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Variabler*/
 /*Mixins*/
 /*Mobil*/
@@ -9,7 +10,45 @@
 }
 
 /*Branding proces*/
-a {
+/*Branding - hero område */
+.branding-main {
+  background-image: url("../img/BGtop.png");
+  background-size: contain;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+.hero-container {
+  display: flex;
+  width: 100%;
+  margin: 0 100px;
+  padding-top: 174px;
+}
+
+.branding-hero p {
+  width: 404px;
+}
+
+.branding-hero h1 {
+  padding-bottom: 80px;
+}
+
+.branding-hero-img {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.branding-hero-img img {
+  max-width: 60%;
+  height: auto;
+}
+
+.hero-gap-til-knap {
+  padding-bottom: 80px;
+}
+
+.branding-hero a {
   background-color: #d47b28;
   border-radius: 50px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -23,4 +62,13 @@ a {
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
+}
+
+/* Chevron */
+.chevron-container {
+  text-align: center;
+}
+
+.chevron {
+  padding: 100px;
 }/*# sourceMappingURL=style.css.map */
