--- a/css/style.css
+++ b/css/style.css
@@ -25,21 +25,21 @@
   padding-top: 174px;
 }
 
-.branding-hero p {
+.hero-tekst p {
   width: 404px;
 }
 
-.branding-hero h1 {
+.hero-tekst h1 {
   padding-bottom: 80px;
 }
 
-.branding-hero-img {
+.hero-img {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.branding-hero-img img {
+.hero-img img {
   max-width: 60%;
   height: auto;
 }
@@ -48,7 +48,7 @@
   padding-bottom: 80px;
 }
 
-.branding-hero a {
+.hero-tekst a {
   background-color: #d47b28;
   border-radius: 50px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
