Opdatering af baggrund på Branding Proces

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 /*Branding proces*/
 /*Branding - hero område */
 .branding-main {
-  background-image: url("../img/BGtop.png");
+  background-image: url("../img/Brandingbaggrund.png");
   background-size: contain;
   background-position: top;
   background-repeat: no-repeat;
