--- a/css/_partial.scss
+++ b/css/_partial.scss
@@ -14,8 +14,7 @@ $font: "roboto", sans-serif;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     text-decoration: none;
     text-align: center;
-    width: 365px;
-    height: 50px;
+    padding: 13.5px 111px;
     color: black;
     font-family: $font;
     font-size: 20px;
