--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,7 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   text-decoration: none;
   text-align: center;
-  width: 365px;
-  height: 50px;
+  padding: 13.5px 111px;
   color: black;
   font-family: "roboto", sans-serif;
   font-size: 20px;
@@ -71,4 +70,6 @@
 
 .chevron {
   padding: 100px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/* Branding hovedområde *//*# sourceMappingURL=style.css.map */
