--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@
 
 .branding-main{
     background-image: url('../img/Brandingbaggrund.png');
-    background-size: contain;
+    background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
  }
@@ -21,13 +21,9 @@
 .hero-container{
     display: flex;
     width: 100%;
-    margin: 0 100px;
+    padding: 0 100px;
     padding-top: 174px;
-}
-
-.hero-tekst p{
-    width: 404px;
-}
+} 
 
 .hero-tekst h1{
     padding-bottom: 80px;
@@ -36,12 +32,12 @@
 .hero-img{
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: right;
 }
 
 .hero-img img{
-    max-width: 60%;
-    height: auto;
+    max-width: 80%;
+    object-fit: contain;
 }
 
 .hero-gap-til-knap{
@@ -64,3 +60,27 @@
 
 /* Branding hovedområde */
 
+.branding-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 175px;
+    min-height: 473px;
+    border: 5px solid rgba(55, 71, 108, 0.6);
+    border-left: none;
+    margin-right: 174px;
+    border-radius: 0 50px 50px 0;
+}
+
+.branding-tekst-bokse{
+    grid-column: 1 / 2;
+    padding-left: 100px;
+}
+
+.branding-img-bokse{
+    grid-column: 2 / 3;
+}
+
+.branding-kasseimg{
+    aspect-ratio: 1/1;
+    object-fit: contain;
+    width: 472px;
+}
