Style til toppen af ydelser.html

--- a/css/style.scss
+++ b/css/style.scss
@@ -160,3 +160,17 @@
 .kontakt{
     @include partial.btn;
 }
+
+/* Ydelser */
+
+.ydelser-main{
+    background-image: url('../img/TopBG.png');
+    background-size:contain;
+    background-position: top;
+    background-repeat: no-repeat;
+    width: 100%;
+ }
+
+ /*Hovedindhold*/
+
+ 
