--- a/css/style.css
+++ b/css/style.css
@@ -179,4 +179,13 @@
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
+}
+
+/* Ydelser */
+.ydelser-main {
+  background-image: url("../img/TopBG.png");
+  background-size: contain;
+  background-position: top;
+  background-repeat: no-repeat;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
