Style til ydelser.html

--- a/css/style.css
+++ b/css/style.css
@@ -188,4 +188,6 @@
   background-position: top;
   background-repeat: no-repeat;
   width: 100%;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*Hovedindhold*//*# sourceMappingURL=style.css.map */
