Styling af den specifikke på ydelser.html

--- a/css/style.css
+++ b/css/style.css
@@ -277,4 +277,22 @@
   border-radius: 50px;
   width: 100%;
   margin: 50px 0;
+}
+
+/*Seperatorlinje*/
+.seperatorbeige {
+  background-color: #efeae1;
+  height: 7px;
+  border: none;
+}
+
+/*Den specifikke*/
+.specifikke {
+  display: flex;
+  justify-content: space-around;
+  padding: 80px 100px;
+}
+
+.specifiktekst {
+  padding-right: 50px;
 }/*# sourceMappingURL=style.css.map */
