--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,9 @@
     padding: 0;
 }
 
-/*Branding proces*/
+
+
+/*Styling af Branding proces*/
 
 /*Branding - hero område */
 
@@ -161,7 +163,9 @@
     @include partial.btn;
 }
 
-/* Ydelser */
+
+
+/* Styling af Ydelser */
 
 .ydelser-main{
     background-image: url('../img/TopBG.png');
@@ -228,6 +232,8 @@
     padding: 0 200px 150px 200px;
  }
 
+/*Hjemmesidekasser*/
+
  .orangebaggrundydelser{
     background-color: partial.$secondary-color;
     width: 100%;
@@ -282,3 +288,43 @@
  .specifiktekst{
     padding-right: 50px;
  }
+
+
+ /*Styling af Storytelling*/
+
+ .storytelling-main{
+    background-image: url('../img/TopBG.png');
+    background-size: contain;
+    background-position: top;
+    background-repeat: no-repeat;
+    width: 100%;
+ }
+
+/* Story tekst billede */
+
+.storytekstbillede{
+    display: flex;
+    width: 100%;
+    margin-bottom: 70px;
+}
+
+.storytekst{
+    padding: 50px 100px;
+}
+
+.beigekasse{
+    background-color: partial.$primary-color;
+    width: 70%;
+    position: relative;
+    right: 0;
+}
+
+.beigeborder{
+    border: 7px solid partial.$primary-color;
+    border-right: none;
+    border-left: none;
+}
+
+.nysgerrigstory{
+    text-align: center;
+}
