Tilretning af footer og top på ydelser.html

--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ p {
 }
 
 /* Styling af Ydelser */
-.ydelser-main {
+.BGbillede-ydelser {
   background-image: url("../img/TopBG.png");
   background-size: contain;
   background-position: top;
