--- a/css/style.scss
+++ b/css/style.scss
@@ -198,9 +198,9 @@ p{
 
 /* Styling af Ydelser */
 
-.ydelser-main{
+.BGbillede-ydelser{
     background-image: url('../img/TopBG.png');
-    background-size:contain;
+    background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
     width: 100%;
