--- a/css/style.css
+++ b/css/style.css
@@ -374,4 +374,59 @@ p {
   background-position: top;
   background-repeat: no-repeat;
   height: 100%;
+}
+
+.kontaktinfo {
+  display: grid;
+  grid-template-columns: 100px, 1fr, 1fr, 100px;
+}
+
+.kontaktimg {
+  grid-column: 3/4;
+}
+
+.kontaktform {
+  display: grid;
+  grid-template-columns: 100px, 1fr, 1fr, 100px;
+}
+
+/*kontaktformular*/
+.kontaktformular {
+  height: 875px;
+  width: 630px;
+  background-color: #EFEAE1;
+  border-radius: 20px, 0, 20px, 0;
+  font-family: "roboto", sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #37476c;
+  letter-spacing: 5%;
+}
+
+input[type=navn], input[type=email], input[type=tel], select, textarea {
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #d47b28;
+  border-radius: 4px;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #d47b28;
+  border-radius: 4px;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+}
+
+input[type=submit] {
+  background-color: #DD7824;
+  color: #fff;
+  padding: 0.8em 1.5em;
+  border: none;
+  border-radius: 4px;
+  width: 100%;
+  font-size: 18px;
 }/*# sourceMappingURL=style.css.map */
