--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1, h2 {
   text-transform: uppercase;
   color: #37476c;
   letter-spacing: 5%;
+  padding-bottom: 20px;
 }
 
 h3 {
@@ -39,6 +40,7 @@ p {
   font-size: 22px;
   color: #37476c;
   letter-spacing: 5%;
+  padding-bottom: 15px;
 }
 
 /*Styling af Branding proces*/
@@ -54,8 +56,7 @@ p {
 .hero-container {
   display: flex;
   width: 100%;
-  padding: 0 100px;
-  padding-top: 174px;
+  padding: 200px 100px 0 100px;
 }
 
 .hero-tekst h1 {
@@ -66,6 +67,7 @@ p {
   width: 100%;
   display: flex;
   justify-content: right;
+  margin-right: 200px;
 }
 
 .hero-img img {
@@ -227,6 +229,11 @@ p {
   display: flex;
   margin: auto 100px;
   gap: 100px;
+}
+
+.overoverskrift {
+  font-weight: 100;
+  padding-bottom: 10px;
 }
 
 /*Visuelle pakker*/
