--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ h3 {
   text-transform: uppercase;
   color: #37476c;
   letter-spacing: 5%;
+  font-weight: 400;
 }
 
 h4 {
@@ -260,6 +261,19 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.h2vispakker {
+  padding: 0;
+}
+
+/*.vis-et li, .vis-to li{
+   list-style-type: none;
+
+}*/
+.pvispakker {
+  opacity: 50%;
+  letter-spacing: 5%;
 }
 
 .kontakt-visuel-container {
