Styling af ydelser.html

--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ p {
 .vis-et {
   background-color: #efeae1;
   width: 50%;
-  padding: 70px 100px;
+  padding: 70px 150px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -265,7 +265,7 @@ p {
   border: 7px solid #efeae1;
   border-right: none;
   width: 50%;
-  padding: 70px 100px;
+  padding: 70px 150px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -280,7 +280,7 @@ p {
   padding: 5px 0;
 }
 
-.pvispakker {
+.p-opacity-pakker {
   opacity: 50%;
   letter-spacing: 5%;
   padding-bottom: 30px;
@@ -337,7 +337,11 @@ p {
 .hjemmesidekasse {
   background-color: #efeae1;
   height: 900px;
-  padding: 5%;
+  padding: 6%;
+}
+
+.centrerhjemmeside {
+  text-align: center;
 }
 
 .linjeydelser {
@@ -366,6 +370,10 @@ p {
 
 .specifiktekst {
   padding-right: 50px;
+}
+
+.specafstand {
+  padding-bottom: 50px;
 }
 
 /*Styling af Storytelling*/
