--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ p {
 }
 
 /*Styling af Storytelling*/
-.storytelling-main {
+.BGbillede-storytelling {
   background-image: url("../img/TopBG.png");
   background-size: contain;
   background-position: top;
@@ -385,6 +385,12 @@ p {
 }
 
 /* Story tekst billede */
+.wooddesignoverskrift {
+  font-size: 30px;
+  font-weight: 400;
+  padding-bottom: 20px;
+}
+
 .storytekstbillede {
   display: flex;
   width: 100%;
