--- a/css/style.scss
+++ b/css/style.scss
@@ -215,6 +215,16 @@ p{
     width: 100%;
  }
 
+ .brodkromme{
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    font-size: 36px;
+    position: absolute;
+    height: 160px;
+    right: 10%;
+    top: 100%;
+ }
+
  /*Hovedindhold*/
 
  .stark-container{
