--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ p {
   text-align: center;
 }
 
-/*Styling af Kontakt side*/
+/*Styling af Kontakt siden*/
 .BGtop {
   background-image: url("../img/BGtop.png");
   background-size: contain;
@@ -421,47 +421,60 @@ p {
   height: 100%;
 }
 
-.kontaktinfo {
-  margin-top: 15em;
-  display: grid;
-  grid-template-columns: 1fr, 1fr;
-  margin-bottom: 10px;
+.kontakt-hero-container {
+  display: flex;
+  width: 100%;
+  padding: 150px 100px 0 100px;
 }
 
-.kontakter {
-  grid-column: 1/2;
+.kontakt-hero-tekst h1 {
+  padding-top: 50px;
+  padding-bottom: 80px;
 }
 
-.kontaktimg {
-  grid-column: 2/3;
+.kontakt-hero-tekst a {
+  text-decoration: none;
+  color: #37476c;
 }
 
-.chevron {
-  align-items: center;
+.kontakt-hero-img {
+  width: 100%;
+  display: flex;
+  justify-content: right;
 }
 
-.charfunktion {
+.kontakt-hero-img img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.chatfunktion {
+  padding: 20px;
   position: fixed;
+  top: 90%;
+  left: 93%;
 }
 
 .kontaktform {
-  display: grid;
-  grid-template-columns: 1fr, 1fr;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 150px 0 0 100px;
 }
 
 .kontaktinformation {
-  grid-column: 1/2;
+  width: 45%;
+  padding-top: 100px;
 }
-
-.kontaktformular {
-  grid-column: 2/3;
+.kontaktinformation h1 {
+  padding-bottom: 80px;
 }
 
 /*kontaktformular*/
 .kontaktformular {
   height: 875px;
   width: 630px;
-  background-color: #EFEAE1;
+  background-color: #efeae1;
   border-radius: 20px 0 0 20px;
   font-family: "roboto", sans-serif;
   font-size: 20px;
@@ -471,8 +484,6 @@ p {
   padding-right: 40px;
   padding-left: 40px;
   padding-top: 80px;
-  margin-top: 100px;
-  margin-bottom: 100px;
 }
 
 main input[type=navn], input[type=email], input[type=tel], select, textarea {
@@ -506,13 +517,97 @@ main input[type=submit] {
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
+  margin-top: 35px;
+  margin-left: 100px;
 }
 main input[type=submit]:hover {
+  background-color: #efeae1;
+  border: 3px solid #d47b28;
+  transition: 0.3s ease-in-out;
   cursor: pointer;
+}
+
+.bunden {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
 }
 
 .pilop {
   width: 35px;
+}
+
+/*Styling af FAQ siden*/
+/* dropdown menu */
+.faq-dropdown {
+  position: relative;
+  display: inline-block;
+  margin-top: 125px;
+}
+
+.dropdown-btn {
+  width: 750px;
+  height: 60px;
+  font-family: "roboto", sans-serif;
+  color: black;
+  font-size: 22px;
   display: flex;
-  justify-self: right;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: none;
+  background-color: #ffffff;
+}
+.dropdown-btn:hover {
+  background-color: rgba(212, 123, 40, 0.1);
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.pilned {
+  height: 20px;
+}
+
+.faq-box1 {
+  height: 475px;
+  background-color: #ffffff;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 75px;
+}
+
+.faq-box2 {
+  height: 475px;
+  background-color: #efeae1;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 75px;
+}
+
+.knap {
+  background-color: #d47b28;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  text-decoration: none;
+  text-align: center;
+  padding: 13.5px 111px;
+  color: black;
+  font-family: "roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.knap:hover {
+  background-color: #efeae1;
+  border: 3px solid #d47b28;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.faq-bunden {
+  display: flex;
+  justify-content: right;
+  align-items: end;
 }/*# sourceMappingURL=style.css.map */
