--- a/css/style.css
+++ b/css/style.css
@@ -251,11 +251,78 @@ p {
   top: 100%;
 }
 
-/*Hovedindhold*/
-.stark-container {
+/*Test på ny kodning*/
+/*Hero område*/
+.ydelsermain {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+  width: 100%;
+}
+
+.hero-container-ydelse {
+  grid-column: 1/7;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   display: flex;
-  margin: auto 100px;
-  gap: 100px;
+}
+
+.hero-tekst-ydelse {
+  grid-column: 1/2;
+  width: 40vw;
+  margin: 10em 0 5em 100px;
+}
+.hero-tekst-ydelse h1 {
+  margin: 0 auto;
+}
+.hero-tekst-ydelse a {
+  background-color: #d47b28;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  text-decoration: none;
+  text-align: center;
+  padding: 13.5px 111px;
+  color: black;
+  font-family: "roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.hero-img-ydelse {
+  grid-column: 2/3;
+  width: 20vw;
+  margin: 5em 100px 10em;
+}
+.hero-img-ydelse img {
+  width: 150%;
+}
+
+/*Chevron*/
+.chevron-container-ydelse {
+  grid-column: 1/7;
+  text-align: center;
+  margin-bottom: 4em;
+}
+
+/*Hovedindhold*/
+.stark-container-ydelse {
+  grid-column: 1/7;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  display: flex;
+}
+.stark-container-ydelse img {
+  grid-column: 1/2;
+  margin: 0 3em 0 100px;
+  width: 30vw;
+  height: auto;
+}
+.stark-container-ydelse article {
+  grid: 2/3;
+  width: 50vw;
+  margin: 0 100px 0 3em;
 }
 
 .overoverskrift {
@@ -264,137 +331,132 @@ p {
 }
 
 /*Visuelle pakker*/
-.vispakker-container {
-  display: flex;
-  margin-top: 135px;
-  margin-bottom: 200px;
-  height: 921px;
+/*.vispakker-container{
+   display: flex;
+   margin-top: 135px;
+   margin-bottom: 200px;
+   height: 921px;
 }
 
-.vis-et {
-  background-color: #efeae1;
-  width: 50%;
-  padding: 70px 150px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+.vis-et{
+   background-color: partial.$primary-color;
+   width: 50%;
+   padding: 70px 150px;
+   display: flex;
+   flex-direction: column;
+   position: relative;
 }
 
-.vis-to {
-  border: 7px solid #efeae1;
-  border-right: none;
-  width: 50%;
-  padding: 70px 150px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+.vis-to{
+   border: 7px solid partial.$primary-color;
+   border-right: none;
+   width: 50%;
+   padding: 70px 150px;
+   display: flex;
+   flex-direction: column;
+   position: relative;
 }
 
-.h2vispakker {
-  padding: 0;
+.h2vispakker{
+   padding: 0;
 }
 
-.vis-et li, .vis-to li {
-  font-size: 40px;
-  padding: 5px 0;
+.vis-et li, .vis-to li{
+   font-size: 40px;
+   padding: 5px 0;
 }
 
-.p-opacity-pakker {
-  opacity: 50%;
-  letter-spacing: 5%;
-  padding-bottom: 30px;
+.p-opacity-pakker{
+   opacity: 50%;
+   letter-spacing: 5%;
+   padding-bottom: 30px;
 }
 
-.kontakt-visuel-container {
-  position: absolute;
-  bottom: 0;
-  padding-bottom: 70px;
+.kontakt-visuel-container{
+   position: absolute;
+   bottom: 0;
+   padding-bottom: 70px;
 }
 
-.pvispris {
-  padding-bottom: 25px;
+.pvispris{
+   padding-bottom: 25px;
 }
 
-.kontaktvisuel {
-  border: 1px solid black;
-  padding: 7px 20px;
-  border-radius: 50px;
-  color: black;
-  text-transform: uppercase;
-  font-size: 20px;
-  text-decoration: none;
-}
-
+.kontaktvisuel{
+   border: 1px solid black;
+   padding: 7px 20px;
+   border-radius: 50px;
+   color: black;
+   text-transform: uppercase;
+   font-size: 20px;
+   text-decoration: none;
+}*/
 /* Tekst til hjemmeside */
-.hjemmesidetekst {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 0 200px 150px 200px;
-}
-
+/*.hjemmesidetekst{
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   padding: 0 200px 150px 200px;
+}*/
 /*Hjemmesidekasser*/
-.orangebaggrundydelser {
-  background-color: #d47b28;
-  width: 100%;
-  height: 62.2vh;
-  position: absolute;
-  z-index: 1;
+/*.orangebaggrundydelser{
+   background-color: partial.$secondary-color;
+   width: 100%;
+   height: 62.2vh;
+   position: absolute;
+   z-index: 1;
 }
 
-.hjemmesidekasse-container {
-  display: flex;
-  justify-content: space-around;
-  gap: 1%;
-  padding: 0 1%;
-  position: relative;
-  z-index: 2;
-  margin-top: 20px;
-  margin-bottom: 160px;
+.hjemmesidekasse-container{
+   display: flex;
+   justify-content: space-around;
+   gap: 1%;
+   padding: 0 1%;
+   position: relative;
+   z-index: 2;
+   margin-top: 20px;
+   margin-bottom: 160px;
 }
 
 .hjemmesidekasse {
-  background-color: #efeae1;
-  height: 900px;
-  padding: 6%;
+   background-color: partial.$primary-color;
+   height: 900px;
+   padding: 6%;
 }
 
-.centrerhjemmeside {
-  text-align: center;
+.centrerhjemmeside{
+   text-align: center;
 }
 
-.linjeydelser {
-  background-color: #ffffff;
-  display: flex;
-  justify-content: center;
-  height: 9px;
-  border-radius: 50px;
-  width: 100%;
-  margin: 50px 0;
-}
-
+.linjeydelser{
+   background-color: partial.$bg-color;
+   display: flex;
+   justify-content: center;
+   height: 9px;
+   border-radius: 50px;
+   width: 100%;
+   margin: 50px 0;
+}*/
 /*Seperatorlinje*/
-.seperatorbeige {
-  background-color: #efeae1;
-  height: 7px;
-  border: none;
-}
-
+/*.seperatorbeige{
+   background-color: partial.$primary-color;
+   height: 7px;
+   border: none;
+}*/
 /*Den specifikke*/
-.specifikke {
-  display: flex;
-  justify-content: space-around;
-  padding: 80px 100px;
+/*.specifikke{
+   display: flex;
+   justify-content: space-around;
+   padding: 80px 100px;
 }
 
-.specifiktekst {
-  padding-right: 50px;
+.specifiktekst{
+   padding-right: 50px;
 }
 
-.specafstand {
-  padding-bottom: 50px;
-}
-
+.specafstand{
+   padding-bottom: 50px;
+}*/
 /*Styling af Storytelling*/
 .BGbillede-storytelling {
   background-image: url("../img/TopBG.png");
