--- a/css/style.scss
+++ b/css/style.scss
@@ -239,85 +239,22 @@ p{
 
 /*Hero område*/ 
 
-.ydelsermain{
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    width: 100%;
-}
+ /*Hovedindhold*/
 
-.hero-container-ydelse{
-    grid-column: 1/7;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+ .stark-container{
     display: flex;
-    
-}
-
-.hero-tekst-ydelse{
-    grid-column: 1/2;
-    width: 40vw;
-    margin: 10em 0 5em 100px;
-    
-        h1{
-            margin: 0 auto;
-        }
-
-        a{
-            @include partial.btn;
-        }
-}
-
-.hero-img-ydelse{
-    grid-column: 2/3;
-    width: 20vw;
-    margin: 5em 100px 10em;
-
-        img{
-            width: 150%;
-        }
-}
-
-/*Chevron*/
-
-.chevron-container-ydelse{
-    grid-column: 1/7;
-    text-align: center;
-    margin-bottom: 4em;
+    margin: auto 100px;
+    gap: 100px;
  }
-
-/*Hovedindhold*/
-
-.stark-container-ydelse{
-    grid-column: 1/7;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    display: flex;
-
-        img{
-            grid-column: 1/2;
-            margin: 0 3em 0 100px;
-            width: 30vw;
-            height: auto;
-        }
-
-        article{
-            grid: 2/3;
-            width: 50vw;
-            margin: 0 100px 0 3em;
-        }
-}
 
  .overoverskrift{
     font-weight: 100;
     padding-bottom: 10px;
  }
 
-
-
 /*Visuelle pakker*/
 
- /*.vispakker-container{
+ .vispakker-container{
     display: flex;
     margin-top: 135px;
     margin-bottom: 200px;
@@ -376,20 +313,20 @@ p{
     text-transform: uppercase;
     font-size: 20px;
     text-decoration: none;
- }*/
+ }
 
  /* Tekst til hjemmeside */
 
- /*.hjemmesidetekst{
+ .hjemmesidetekst{
     display: flex;
     flex-direction: column;
     width: 100%;
     padding: 0 200px 150px 200px;
- }*/
+ }
 
 /*Hjemmesidekasser*/
 
- /*.orangebaggrundydelser{
+ .orangebaggrundydelser{
     background-color: partial.$secondary-color;
     width: 100%;
     height: 62.2vh;
@@ -426,19 +363,19 @@ p{
     border-radius: 50px;
     width: 100%;
     margin: 50px 0;
- }*/
+ }
 
  /*Seperatorlinje*/
 
- /*.seperatorbeige{
+ .seperatorbeige{
     background-color: partial.$primary-color;
     height: 7px;
     border: none;
- }*/
+ }
 
  /*Den specifikke*/
 
- /*.specifikke{
+ .specifikke{
     display: flex;
     justify-content: space-around;
     padding: 80px 100px;
@@ -450,7 +387,7 @@ p{
 
  .specafstand{
     padding-bottom: 50px;
- }*/
+ }
 
 
  /*Styling af Storytelling*/
